# Sage

./: .gitignore  README.md  conversation_log.md  settings.gradle.kts
MyApplication/app/: build.gradle.kts
MyApplication/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: logback.xml  metadata.yaml  model.ncnn.param
app/src/main/cpp/: ByteTracker.cpp  CMakeLists.txt  jni_bridge.cpp  yolo_detector.cpp
app/src/main/cpp/include/: ByteTracker.h  yolo_detector.h
app/src/main/cpp/ncnn/arm64-v8a/include/: yolo_detector.h
app/src/main/cpp/ncnn/arm64-v8a/include/ncnn/: platform.h
app/src/main/cpp/ncnn/armeabi-v7a/include/ncnn/: platform.h
app/src/main/cpp/ncnn/riscv64/include/ncnn/: platform.h
app/src/main/cpp/ncnn/x86/lib/cmake/ncnn/: ncnnConfig.cmake
app/src/main/cpp/ncnn/x86_64/include/ncnn/: platform.h
app/src/main/java/com/example/objectdetection/: AccessibilityFirstApp.kt  ArduinoConnector.kt  CameraPreview.kt  CameraScreen.kt  CameraState.kt  DetectionResult.kt  ESP32CameraStream.kt  MainActivity.kt  NetworkUtils.kt  (+8 more)
app/src/main/ncnn_models/: main.cpp  metadata.yaml  model.ncnn.param
app/src/main/res/drawable/: ic_cane.xml  ic_glasses.xml
arduino_sketch/: arduino_sketch.ino  buzzer_test.ino
best_traffic_light_model_ncnn/: metadata (1).yaml  model.ncnn (1).param  model_ncnn.py
cross_walk_model/: metadata (1).yaml  model.ncnn (1).param
esp32_camera_sketch/: esp32_camera_sketch.ino
gradle/wrapper/: gradle-wrapper.properties
ultrasonic_sketch/: ultrasonic_sketch.ino
(+4 files in other folders)
